add database hard coded information

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,4 +1,4 @@
-<h1>Welcome to a Blog</h1>
+<h1>Welcome to a Blog about Gaming</h1>
 
 <h2>Authors</h2>
 <ul>
@@ -7,4 +7,4 @@
 </ul>
 
 <h2>Inspiration</h2>
-<p>We have to do this.</p>
+<p>We do this because we have to.</p>
