--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<h1>This will be a wall with our blog feed, unorganized to start</h1>
+
+<ul>
+    <li>example 1</li>
+    <li>example 2</li>
+    <li>example 3</li>
+</ul>
