--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <header class="jumbotron">
-    <h1>{{#link-to 'home'}}The Blog{{/link-to}}</h1>
-    <h3>Links to blog categories can go here</h3>
+    <h1>{{#link-to 'index'}}The Gaming Blog{{/link-to}}</h1>
+    <!-- <h3>{{#link-to 'console'}}Console Games{{/link-to}} | {{#link-to 'board'}}Board Games{{/link-to}} | {{#link-to 'card'}}Card Games{{/link-to}}</h3> -->
     <h3>Search by tags can go here</h3>
   </header>
   {{outlet}}
@@ -9,6 +9,6 @@
     <hr>
     {{#link-to 'contact'}}Contact Us{{/link-to}}
     {{#link-to 'about'}}About Us{{/link-to}}
-    {{#link-to 'home'}}Home Page{{/link-to}}
+    {{#link-to 'index'}}Home Page{{/link-to}}
   </footer>
 </div>
