add working show and hide functions

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
 </div>
 <div id="blog-content">
     <ul>
-        {{#each model.game as |game|}}
+        {{#each model as |game|}}
         {{game-tile game=game}}
         {{/each}}
     </ul>
