--- a/app/templates/components/edit-game.hbs
+++ b/app/templates/components/edit-game.hbs
@@ -1,1 +1,46 @@
-{{yield}}
+{{#if updateGameForm}}
+    <h1>Edit {{game.name}}</h1>
+      <div class="update-game">
+        <form>
+          <div class="form-group">
+              <label for="name">Game Name</label>
+              {{input value=name id="name" placeholder=game.name}}
+          </div>
+          <div class="form-group">
+              <label for="category">Category</label>
+              {{input value=category id="category" placeholder=game.category}}
+          </div>
+          <div class="form-group">
+              <label for="description">Game Description</label>
+              {{input value=description id="description" placeholder=game.description}}
+          </div>
+          <div class="form-group">
+              <label for="playerCount">How many players can play this game?</label>
+              {{input value=playerCount id="playerCount" placeholder=game.playerCount}}
+          </div>
+          <div class="form-group">
+              <label for="image">Update the image link for this game</label>
+              {{input value=image id="image" placeholder=game.image}}
+          </div>
+          <div class="form-group">
+            <h2>Change the reviews to the game</h2>
+            {{#each game.review as |review|}}
+              <label for="author">Name:</label>
+              {{input value=author id="author" placeholder=review.author}}
+              <label for="note">Review description:</label>
+              {{input value=note id="note" placeholder=review.note}}
+            {{/each}}
+          </div>
+          <div class="form-group">
+              {{#each game.tag as |tag|}}
+                <label for="tag">Change the tags(i.e. strategy)</label>
+                {{input value=tag id="tag" placeholder=tag}}
+              {{/each}}
+          </div>
+
+          <button {{action 'update1' game}}>Save</button>
+        </form>
+      </div>
+    {{else}}
+      <button {{action 'updateGameForm'}}>Update</button>
+    {{/if}}
