--- a/app/templates/components/new-game.hbs
+++ b/app/templates/components/new-game.hbs
@@ -5,9 +5,9 @@
             <div class="form-group">
                 <label for="category">Game Category</label>
                 <!-- {{#select-box/native as |sb|}}
-                    {{sb.option value="video game" label="Video Game"}}
-                    {{sb.option value="card game" label="Card Game"}}
-                    {{sb.option value="board game" label="Board Game"}}
+                    {{sb.option value='video game' label='Video Game'}}
+                    {{sb.option value='card game' label='Card Game'}}
+                    {{sb.option value='board game' label='Board Game'}}
                 {{/select-box/native}} -->
             </div>
             <div class="form-group">
