--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,14 +1,18 @@
 <div class="container">
   <header class="jumbotron">
-    <h1>{{#link-to 'index'}}The Gaming Blog{{/link-to}}</h1>
-    <!-- <h3>{{#link-to 'console'}}Console Games{{/link-to}} | {{#link-to 'board'}}Board Games{{/link-to}} | {{#link-to 'card'}}Card Games{{/link-to}}</h3> -->
-    <h3>Search by tags can go here</h3>
+    <div class="nav-bar">
+       <div class="main">
+         {{#link-to 'index' class="title"}}
+         <h1 >Gaming Blog</h1>{{/link-to}}
+       </div>
+      <p>{{#link-to 'dash' class="navlink"}}Dashboard{{/link-to}} | {{#link-to 'about' class="navlink"}} About{{/link-to}} |
+      {{#link-to 'contact' class="navlink"}} Contact{{/link-to}}</p>
+    </div>
   </header>
+
   {{outlet}}
+
   <footer>
     <hr>
-    {{#link-to 'contact'}}Contact Us{{/link-to}}
-    {{#link-to 'about'}}About Us{{/link-to}}
-    {{#link-to 'index'}}Home Page{{/link-to}}
   </footer>
 </div>
