--- a/app/templates/components/game-tile.hbs
+++ b/app/templates/components/game-tile.hbs
@@ -13,7 +13,7 @@
                 By {{review.author}}</h4>
             </div>
         {{/each}}<br>
-        <h4>Tags:{{#each game.tag as |tag|}} "{{tag}}" {{/each}}</h4><br>
+        <h4>Tags:{{#each game.tag as |tag|}} "{{tag.tag}}" {{/each}}</h4><br>
     </div>
     {{else}}
     <div class="row exterior">
