--- a/app/templates/components/edit-game.hbs
+++ b/app/templates/components/edit-game.hbs
@@ -4,19 +4,19 @@
         <form>
           <div class="form-group">
               <label for="name">Game Name</label>
-              {{input value=name id="name" placeholder=game.name}}
+              {{input value=name class="name" placeholder=game.name}}
           </div>
           <div class="form-group">
               <label for="description">Game Description</label>
-              {{input value=description id="description" placeholder=game.description}}
+              {{input value=description class="description" placeholder=game.description}}
           </div>
           <div class="form-group">
               <label for="playerCount">How many players can play this game?</label>
-              {{input value=playerCount id="playerCount" placeholder=game.playerCount}}
+              {{input value=playerCount class="playerCount" placeholder=game.playerCount}}
           </div>
           <div class="form-group">
               <label for="image">Update the image link for this game</label>
-              {{input value=image id="image" placeholder=game.image}}
+              {{input value=image class="image" placeholder=game.image}}
           </div>
 
           <button {{action 'update' game}}>Save</button>
