add functioning site, needs css still

--- a/app/templates/components/index-blog-tile.hbs
+++ b/app/templates/components/index-blog-tile.hbs
@@ -1,7 +1,7 @@
 {{#link-to 'game' game.id}}
   <div class="blog-posts row">
     <div class="col-md-5 image-div">
-      <img class="home-image" src={{game.image}} alt={{game.name}}>>
+      <img class="home-image" src={{game.image}} alt={{game.name}}>
     </div>
     <div class="col-md-7">
       <h3>{{game.name}}</h3>
