--- a/app/templates/components/list-category-tile.hbs
+++ b/app/templates/components/list-category-tile.hbs
@@ -1,5 +1,6 @@
 <h2>Categories</h2>
-
-{{#each categories as |category|}}
-  {{#link-to 'category-games' category.id}}{{category.category}}{{/link-to}}
-{{/each}}
+<div class="category-side-bar">
+  {{#each categories as |category|}}
+  {{#link-to 'category-games' category.id}}{{category.category}}{{/link-to}}<br><hr>
+  {{/each}}
+</div>
