--- a/app/templates/category-games.hbs
+++ b/app/templates/category-games.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8">
-    <h3>{{model.category.category}}</h3>
+    <h3>Category Name: {{model.category.category}}</h3>
     <div class="index-blog-pane">
       {{#each model.category.games as |game|}}
         {{index-blog-tile game=game}}
