--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,12 +1,12 @@
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-10">
     <div class="index-blog-pane">
-      {{#each model.game as |blog|}}
-        {{index-blog-tile blog=blog}}
+      {{#each model.games as |game|}}
+        {{index-blog-tile game=game}}
       {{/each}}
     </div>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-2">
     <div class="categories">
       {{list-category-tile categories=model.categories}}
     </div>
