--- a/app/templates/components/index-blog-tile.hbs
+++ b/app/templates/components/index-blog-tile.hbs
@@ -1,9 +1,9 @@
 {{#link-to 'game' game.id}}
   <div class="blog-posts row">
-    <div class="col-md-5 image-div">
+    <div class="col-md-6 image-div">
       <img class="home-image" src={{game.image}} alt={{game.name}}>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-6 front-description">
       <h3>{{game.name}}</h3>
       <h4>Player Count: {{game.playerCount}}</h4>
       <p>{{game.description}}</p>
